# maybebig

./: .gitignore  BUILD.bazel  LICENSE  README.md  go.mod
maybebig/: BUILD.bazel  cmp.go  conv_in.go  conv_out.go  math.go  maybebig.go  op.go  precision.go  seq.go  trig.go
maybebig/utils/: BUILD.bazel  maybebigutils.go
